--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.openclassrooms.firebaseoc">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -9,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name=".ui.MainActivity"
             android:theme="@style/AppTheme.NoTitle"> <!-- DISABLE TOOLBAR IN MAIN ACTIVITY-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,6 +19,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- PROFILE ACTIVITY -->
+        <activity android:name=".ui.ProfileActivity"
+            android:label="@string/toolbar_title_login_activity"
+            android:parentActivityName=".ui.MainActivity"/>
+        <!-- MENTOR CHAT ACTIVITY -->
+        <activity android:name=".ui.chat.MentorChatActivity"
+            android:label="@string/toolbar_title_mentor_chat_activity"
+            android:parentActivityName=".ui.MainActivity"/>
+
+        <!-- NOTIFICATION SERVICE -->
+
+        <!-- NOTIFICATION SERVICE -->
+        <service
+            android:name=".notification.NotificationService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
